recursion.hanoi.lessons.recursion.hanoi.InterleavedHanoi.scala.error
InterleavedHanoi:12: error: not found: value hanoi
      hanoi((n - 1), src1, dst, other)
      ^InterleavedHanoi:14: error: not found: value hanoi
      hanoi((n - 1), src2, dst, src1)
      ^